  26 Aug 2012; Manuel Rüger (mrueg) gentoo@rueg.eu albino-1.3.3.ebuild:
  dev-ruby/albino: Drop some ruby targets

  26 Aug 2012; Manuel Rüger (mrueg) gentoo@rueg.eu albino-1.3.3.ebuild:
  dev-ruby/albino: Use ruby_add_bdepend

  25 Aug 2012; Manuel Rüger (mrueg) gentoo@rueg.eu albino-1.3.3.ebuild:
  dev-ruby/albino: Drop tests

*albino-1.3.3 (25 Aug 2012)

  25 Aug 2012; Manuel Rüger (mrueg) <gentoo@rueg.eu> +albino-1.3.3.ebuild,
  +metadata.xml:
  dev-ruby/albino: Initial ebuild